force-app/main/default/objects/Lead/fields/Classificacao__c.field-meta.xml
<CustomField>
    <fullName>Classificacao__c</fullName>
    <formula>IF(ISBLANK(Pontuacao_Lead__c), "",
IF(Pontuacao_Lead__c &gt;= 70, "Quente",
IF(Pontuacao_Lead__c &gt;= 40, "Morno", "Frio")))</formula>
    <label>Classificação</label>
    <length>10</length>
    <type>Text</type>
</CustomField>