force-app/main/default/objects/Lead/fields/Data_Atribuicao__c.field-meta.xml
<CustomField>
    <fullName>Data_Atribuicao__c</fullName>
    <description>Momento em que o lead foi atribuido a um agente. Meta: 5 minutos.</description>
    <label>Data de Atribuição</label>
    <type>DateTime</type>
</CustomField>