force-app/main/default/objects/Lead/fields/Data_Conclusao_Prevista__c.field-meta.xml
<CustomField>
    <fullName>Data_Conclusao_Prevista__c</fullName>
    <label>Conclusão Prevista</label>
    <type>Date</type>
</CustomField>