force-app/main/default/objects/Lead/fields/Data_Entrada__c.field-meta.xml
<CustomField>
    <fullName>Data_Entrada__c</fullName>
    <description>Data de entrada do lead. Base das métricas de latência.</description>
    <label>Data de Entrada</label>
    <type>DateTime</type>
</CustomField>