force-app/main/default/objects/Lead/fields/Data_Primeiro_Contacto__c.field-meta.xml
<CustomField>
    <fullName>Data_Primeiro_Contacto__c</fullName>
    <description>Momento do primeiro contacto real. Meta: 2 horas uteis.</description>
    <label>Data do Primeiro Contacto</label>
    <type>DateTime</type>
</CustomField>