force-app/main/default/objects/Lead/fields/Data_Visita_Agendada__c.field-meta.xml
<CustomField>
    <fullName>Data_Visita_Agendada__c</fullName>
    <description>Carimbado por Flow quando se agenda um Evento no lead.</description>
    <label>Data da Visita Agendada</label>
    <type>DateTime</type>
</CustomField>