force-app/main/default/objects/Lead/fields/Fase_Obra__c.field-meta.xml
<CustomField>
    <fullName>Fase_Obra__c</fullName>
    <description>Fase da obra: em projeto, em construcao ou concluido.</description>
    <label>Fase da Obra</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Projeto</fullName><default>false</default></value>
            <value><fullName>Em construcao</fullName><default>false</default></value>
            <value><fullName>Concluido</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>