force-app/main/default/objects/Lead/fields/Fiador__c.field-meta.xml
<CustomField>
    <fullName>Fiador__c</fullName>
    <description>Existencia de fiador. Pesa na pontuacao de um arrendamento.</description>
    <label>Fiador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Tem fiador</fullName><default>false</default></value>
            <value><fullName>Nao necessita</fullName><default>false</default></value>
            <value><fullName>Nao tem</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>