force-app/main/default/objects/Lead/fields/Financiamento__c.field-meta.xml
<CustomField>
    <fullName>Financiamento__c</fullName>
    <label>Financiamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pre-aprovado</fullName><default>false</default><label>Pré-aprovado</label></value>
            <value><fullName>Em analise</fullName><default>false</default><label>Em análise</label></value>
            <value><fullName>Nao iniciado</fullName><default>false</default><label>Não iniciado</label></value>
            <value><fullName>Nao necessita</fullName><default>false</default><label>Não necessita (compra a pronto)</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>