force-app/main/default/objects/Lead/fields/Horas_Ate_Primeiro_Contacto__c.field-meta.xml
<CustomField>
    <fullName>Horas_Ate_Primeiro_Contacto__c</fullName>
    <description>Horas entre a entrada do lead e o primeiro contacto. Meta: 2 horas.</description>
    <formula>IF(
   OR(ISBLANK(Data_Primeiro_Contacto__c), ISBLANK(Data_Entrada__c)),
   null,
   (Data_Primeiro_Contacto__c - Data_Entrada__c) * 24)</formula>
    <label>Horas até 1º Contacto</label>
    <precision>8</precision><scale>1</scale>
    <type>Number</type>
</CustomField>