force-app/main/default/objects/Lead/fields/Imoveis_Sugeridos__c.field-meta.xml
<CustomField>
    <fullName>Imoveis_Sugeridos__c</fullName>
    <description>Imoveis da carteira que correspondem ao perfil. Escrito por Flow.</description>
    <label>Imóveis Sugeridos</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>