force-app/main/default/objects/Lead/fields/Imovel_Area_m2__c.field-meta.xml
<CustomField>
    <fullName>Imovel_Area_m2__c</fullName>
    <label>Área do Imóvel (m²)</label>
    <precision>8</precision><scale>2</scale>
    <type>Number</type>
</CustomField>