force-app/main/default/objects/Lead/fields/Imovel_Localizacao__c.field-meta.xml
<CustomField>
    <fullName>Imovel_Localizacao__c</fullName>
    <label>Localização do Imóvel</label>
    <length>150</length>
    <type>Text</type>
</CustomField>