force-app/main/default/objects/Lead/fields/Imovel_Pretendido__c.field-meta.xml
<CustomField>
    <fullName>Imovel_Pretendido__c</fullName>
    <description>Imóvel que o lead quer comprar ou arrendar, tipicamente vindo do site.</description>
    <label>Imóvel Pretendido</label>
    <referenceTo>Imovel__c</referenceTo>
    <relationshipLabel>Leads Interessados</relationshipLabel>
    <relationshipName>Leads_Interessados</relationshipName>
    <type>Lookup</type>
</CustomField>