force-app/main/default/objects/Lead/fields/Imovel_Tipo__c.field-meta.xml
<CustomField>
    <fullName>Imovel_Tipo__c</fullName>
    <label>Tipo de Imóvel a Angariar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Apartamento</fullName><default>false</default><label>Apartamento</label></value>
            <value><fullName>Moradia</fullName><default>false</default><label>Moradia</label></value>
            <value><fullName>Terreno</fullName><default>false</default><label>Terreno</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>