force-app/main/default/objects/Lead/fields/Minutos_Ate_Atribuicao__c.field-meta.xml
<CustomField>
    <fullName>Minutos_Ate_Atribuicao__c</fullName>
    <description>Minutos entre a entrada do lead e a atribuicao. Meta: 5 minutos.</description>
    <formula>IF(
   OR(ISBLANK(Data_Atribuicao__c), ISBLANK(Data_Entrada__c)),
   null,
   (Data_Atribuicao__c - Data_Entrada__c) * 24 * 60)</formula>
    <label>Minutos até Atribuição</label>
    <precision>8</precision><scale>0</scale>
    <type>Number</type>
</CustomField>