force-app/main/default/objects/Lead/fields/Nome_Empreendimento__c.field-meta.xml
<CustomField>
    <fullName>Nome_Empreendimento__c</fullName>
    <label>Nome do Empreendimento</label>
    <length>120</length>
    <type>Text</type>
</CustomField>