force-app/main/default/objects/Lead/fields/Notas_Preferencias__c.field-meta.xml
<CustomField>
    <fullName>Notas_Preferencias__c</fullName>
    <description>Preferencias em texto livre. Materia-prima do matching por AI.</description>
    <label>Notas e Preferências</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>