force-app/main/default/objects/Lead/fields/Numero_Fracoes__c.field-meta.xml
<CustomField>
    <fullName>Numero_Fracoes__c</fullName>
    <description>Numero de fracoes a comercializar.</description>
    <label>Nº de Frações</label>
    <precision>4</precision><scale>0</scale>
    <type>Number</type>
</CustomField>