force-app/main/default/objects/Lead/fields/Plano_de_Procura__c.field-meta.xml
<CustomField>
    <fullName>Plano_de_Procura__c</fullName>
    <description>Plano de procura fora da carteira, gerado por AI.</description>
    <label>Plano de Procura</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>