force-app/main/default/objects/Lead/fields/Plano_Gerado__c.field-meta.xml
<CustomField>
    <fullName>Plano_Gerado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marcado pelo Flow depois de gerar o Plano de Procura. Existe porque Rich Text nao pode ser usado em filtros, nem em SOQL nem nos criterios de entrada de um Flow. Sem ele, o Flow regerava o plano em cada gravacao.</description>
    <label>Plano Gerado</label>
    <type>Checkbox</type>
</CustomField>