force-app/main/default/objects/Lead/fields/Pontuacao_Lead__c.field-meta.xml
<CustomField>
    <fullName>Pontuacao_Lead__c</fullName>
    <description>Pontuacao objetiva do lead, de 0 a 100.</description>
    <formula>IF(OR(RecordType.DeveloperName = "Angariacao", RecordType.DeveloperName = "Angariacao_Empreendimento"), null,

IF(RecordType.DeveloperName = "Arrendamento",
   IF(OR(ISPICKVAL(Fiador__c, "Tem fiador"), ISPICKVAL(Fiador__c, "Nao necessita")), 30, 0),
   IF(ISPICKVAL(Financiamento__c, "Pre-aprovado"), 30,
   IF(ISPICKVAL(Financiamento__c, "Nao necessita"), 30,
   IF(ISPICKVAL(Financiamento__c, "Em analise"), 15, 0))))
+
IF(ISPICKVAL(Prazo_Decisao__c, "Menos de 3 meses"), 25,
IF(ISPICKVAL(Prazo_Decisao__c, "3 a 6 meses"), 15,
IF(ISPICKVAL(Prazo_Decisao__c, "6 a 12 meses"), 5, 0)))
+
IF(Orcamento_Max__c &gt; 0, 15, 0)
+
IF(LEN(Procura_Zonas__c) &gt; 0, 15, 0)
+
IF(ISPICKVAL(LeadSource, "Referencia"), 15,
IF(OR(ISPICKVAL(LeadSource, "Site"), ISPICKVAL(LeadSource, "Portal Imobiliario")), 5, 0))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pontuação</label>
    <precision>3</precision><scale>0</scale>
    <type>Number</type>
</CustomField>