force-app/main/default/objects/Lead/fields/Prazo_Decisao__c.field-meta.xml
<CustomField>
    <fullName>Prazo_Decisao__c</fullName>
    <label>Prazo de Decisão</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Menos de 3 meses</fullName><default>false</default><label>Menos de 3 meses</label></value>
            <value><fullName>3 a 6 meses</fullName><default>false</default><label>3 a 6 meses</label></value>
            <value><fullName>6 a 12 meses</fullName><default>false</default><label>6 a 12 meses</label></value>
            <value><fullName>Sem urgencia</fullName><default>false</default><label>Sem urgência</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>