force-app/main/default/objects/Lead/fields/Tipo_de_Perda__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Perda__c</fullName>
    <description>Distingue o lead que nunca foi viavel do que se perdeu por demora.</description>
    <formula>IF(ISBLANK(TEXT(Motivo_Nao_Qualificacao__c)), "",
IF(OR(ISPICKVAL(Motivo_Nao_Qualificacao__c, "Foi para a concorrencia"),
      ISPICKVAL(Motivo_Nao_Qualificacao__c, "Demora no primeiro contacto")),
   "Era viavel - perdemos",
   "Nunca foi viavel"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de Perda</label>
    <type>Text</type>
</CustomField>