force-app/main/default/objects/Lead/fields/Valor_Pretendido__c.field-meta.xml
<CustomField>
    <fullName>Valor_Pretendido__c</fullName>
    <description>Valor que o proprietario pretende obter.</description>
    <label>Valor Pretendido</label>
    <precision>12</precision><scale>2</scale>
    <type>Currency</type>
</CustomField>