force-app/main/default/objects/Lead/recordTypes/Angariacao.recordType-meta.xml
<RecordType>
    <fullName>Angariacao</fullName>
    <active>true</active>
    <businessProcess>Lead_Angariacao</businessProcess>
    <description>Proprietário que quer vender ou arrendar o seu imóvel.</description>
    <label>Angariação de Imóvel</label>
</RecordType>