force-app/main/default/objects/Lead/recordTypes/Angariacao_Empreendimento.recordType-meta.xml
<RecordType>
    <fullName>Angariacao_Empreendimento</fullName>
    <active>true</active>
    <businessProcess>Lead_Angariacao_Empreendimento</businessProcess>
    <description>Construtora que confia a comercialização de um empreendimento.</description>
    <label>Angariação de Empreendimento</label>
</RecordType>