force-app/main/default/objects/Lead/recordTypes/Arrendamento.recordType-meta.xml
<RecordType>
    <fullName>Arrendamento</fullName>
    <active>true</active>
    <businessProcess>Lead_Arrendamento</businessProcess>
    <description>Quer arrendar. Qualifica-se por fiador e comprovativo de rendimentos.</description>
    <label>Arrendamento</label>
</RecordType>