force-app/main/default/objects/Lead/recordTypes/Compra.recordType-meta.xml
<RecordType>
    <fullName>Compra</fullName>
    <active>true</active>
    <businessProcess>Lead_Compra</businessProcess>
    <description>Quer comprar. Qualifica-se por financiamento, orçamento e prazo.</description>
    <label>Compra</label>
</RecordType>