force-app/main/default/objects/Lead/recordTypes/Interessado.recordType-meta.xml
<RecordType>
    <fullName>Interessado</fullName>
    <active>false</active>
    <businessProcess>Lead_Interessado</businessProcess>
    <description>Substituido por Compra e Arrendamento. Desativado para preservar o historico.</description>
    <label>Interessado (descontinuado)</label>
</RecordType>