force-app/main/default/objects/Lead/validationRules/Avanco_exige_contacto_registado.validationRule-meta.xml
<ValidationRule>
    <fullName>Avanco_exige_contacto_registado</fullName>
    <active>true</active>
    <description>Exige a Data do 1o Contacto, carimbada quando a chamada e concluida.</description>
    <errorConditionFormula>AND(
  ISCHANGED(Status),
  OR(ISPICKVAL(Status, "Em Contacto"),
     ISPICKVAL(Status, "Qualificado"),
     ISPICKVAL(Status, "Visita Agendada"),
     ISPICKVAL(Status, "Avaliacao do Imovel"),
     ISPICKVAL(Status, "Analise do Empreendimento"),
     ISPICKVAL(Status, "Proposta de Mediacao")),
  ISBLANK(Data_Primeiro_Contacto__c)
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Registe a chamada como Tarefa concluída antes de avançar a fase.</errorMessage>
</ValidationRule>