force-app/main/default/objects/Lead/validationRules/Conclusao_prevista_no_futuro.validationRule-meta.xml
<ValidationRule>
    <fullName>Conclusao_prevista_no_futuro</fullName>
    <active>true</active>
    <description>So valida na criacao ou alteracao, para nao bloquear registos historicos.</description>
    <errorConditionFormula>AND(
  OR(ISNEW(), ISCHANGED(Data_Conclusao_Prevista__c)),
  NOT(ISBLANK(Data_Conclusao_Prevista__c)),
  Data_Conclusao_Prevista__c &lt; TODAY(),
  OR(ISPICKVAL(Fase_Obra__c, "Projeto"), ISPICKVAL(Fase_Obra__c, "Em construcao"))
)</errorConditionFormula>
    <errorDisplayField>Data_Conclusao_Prevista__c</errorDisplayField>
    <errorMessage>A conclusão prevista não pode estar no passado.</errorMessage>
</ValidationRule>