force-app/main/default/objects/Lead/validationRules/Convertido_so_pelo_botao_converter.validationRule-meta.xml
<ValidationRule>
    <fullName>Convertido_so_pelo_botao_converter</fullName>
    <active>true</active>
    <description>Impede marcar o estado Convertido a mao, sem conversao real.</description>
    <errorConditionFormula>AND(
  ISCHANGED(Status),
  ISPICKVAL(Status, "Convertido"),
  NOT(IsConverted)
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Use o botão Converter. Este estado não se escolhe à mão.</errorMessage>
</ValidationRule>