force-app/main/default/objects/Lead/validationRules/Motivo_obrigatorio_ao_desqualificar.validationRule-meta.xml
<ValidationRule>
    <fullName>Motivo_obrigatorio_ao_desqualificar</fullName>
    <active>true</active>
    <description>Garante a metrica de perdas: sem motivo nao ha analise.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Status, "Nao Qualificado"),
  ISBLANK(TEXT(Motivo_Nao_Qualificacao__c))
)</errorConditionFormula>
    <errorDisplayField>Motivo_Nao_Qualificacao__c</errorDisplayField>
    <errorMessage>Indique o motivo da desqualificação.</errorMessage>
</ValidationRule>