force-app/main/default/objects/Lead/validationRules/Orcamento_minimo_nao_excede_maximo.validationRule-meta.xml
<ValidationRule>
    <fullName>Orcamento_minimo_nao_excede_maximo</fullName>
    <active>true</active>
    <description>Um intervalo invertido faz o matching nao devolver nada.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Orcamento_Min__c)), NOT(ISBLANK(Orcamento_Max__c)), Orcamento_Min__c &gt; Orcamento_Max__c)</errorConditionFormula>
    <errorDisplayField>Orcamento_Min__c</errorDisplayField>
    <errorMessage>O orçamento mínimo não pode ser superior ao máximo.</errorMessage>
</ValidationRule>