force-app/main/default/objects/Lead/validationRules/Visita_agendada_exige_evento.validationRule-meta.xml
<ValidationRule>
    <fullName>Visita_agendada_exige_evento</fullName>
    <active>true</active>
    <description>Le a data carimbada por Flow: uma validation rule nao ve Eventos.</description>
    <errorConditionFormula>AND(
  ISCHANGED(Status),
  ISPICKVAL(Status, "Visita Agendada"),
  ISBLANK(Data_Visita_Agendada__c)
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Marque o Evento da visita antes de pôr o lead nesta fase.</errorMessage>
</ValidationRule>