force-app/main/default/objects/Lead/listViews/Angariacoes_em_Curso.listView-meta.xml
<ListView>
    <fullName>Angariacoes_em_Curso</fullName>
    <booleanFilter>(1 OR 2) AND 3</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Imovel_Localizacao__c</columns>
    <columns>Valor_Pretendido__c</columns>
    <columns>Nome_Empreendimento__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Angariacao</value>
    </filters>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Angariacao_Empreendimento</value>
    </filters>
    <filters>
        <field>LEAD.CONVERTED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>🏠 Angariações em Curso</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>