force-app/main/default/objects/Lead/listViews/Leads_Quentes.listView-meta.xml
<ListView>
    <fullName>Leads_Quentes</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Classificacao__c</columns>
    <columns>Pontuacao_Lead__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Classificacao__c</field>
        <operation>equals</operation>
        <value>Quente</value>
    </filters>
    <filters>
        <field>IsConverted</field>
        <operation>equals</operation>
        <value>false</value>
    </filters>
    <label>🔥 Leads Quentes</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>