force-app/main/default/objects/Lead/listViews/Perdidos_Por_Nossa_Culpa.listView-meta.xml
<ListView>
    <fullName>Perdidos_Por_Nossa_Culpa</fullName>
    <columns>NAME</columns>
    <columns>Company</columns>
    <columns>Classificacao__c</columns>
    <columns>Motivo_Nao_Qualificacao__c</columns>
    <columns>Tipo_de_Perda__c</columns>
    <columns>LeadSource</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tipo_de_Perda__c</field>
        <operation>equals</operation>
        <value>Era viavel - perdemos</value>
    </filters>
    <label>⚠️ Perdidos por Falha Nossa</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>