force-app/main/default/objects/Lead/listViews/Sem_Primeiro_Contacto.listView-meta.xml
<ListView>
    <fullName>Sem_Primeiro_Contacto</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Classificacao__c</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Data_Primeiro_Contacto__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>IsConverted</field>
        <operation>equals</operation>
        <value>false</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>notEqual</operation>
        <value>Nao Qualificado</value>
    </filters>
    <label>⏱ Sem Primeiro Contacto</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>